# dbstruct

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Readme.md  re_open_db.rs
.github/workflows/: testing.yml
dbstruct-derive/: Cargo.toml
dbstruct-derive/src/: codegen.rs  errors.rs  ir.rs  key.rs  lib.rs  methods.rs  model.rs
dbstruct-derive/src/ir/: accessor.rs  new_method.rs  struct_def.rs
dbstruct-derive/src/methods/: default.rs  hashmap.rs  option.rs  vec_by_idx.rs
dbstruct-derive/src/model/: attribute.rs  backend.rs  field.rs  key.rs
dbstruct-derive/src/model/attribute/: errors.rs
dbstruct-derive/src/model/field/: wrapper.rs
dbstruct-derive/src/model/field/wrapper/: errors.rs
examples/: advanced.rs  basic.rs  map_wrapper.rs  pass_in_database.rs  passing_in_database.rs  setup_tracing.rs  simple.rs  test.rs  trivial.rs  vecdeque.rs
prototype/src/: a.rs  b.rs  main.rs
src/: lib.rs  stores.rs  traits.rs  wrapper.rs  wrappers.rs
src/stores/: btreemap.rs  hashmap.rs  rocksdb.rs  sled.rs
src/traits/: byte_store.rs  data_store.rs
src/wrapper/: default_trait.rs  default_val.rs  map.rs  option.rs  vec.rs  vec_deque.rs
src/wrapper/map/: entry.rs  extend.rs  iterator.rs
src/wrapper/vec/: extend.rs  iterator.rs
src/wrapper/vec_deque/: extend.rs  iterator.rs
src/wrappers/: default_trait.rs  default_val.rs  map.rs  option.rs  vec.rs
structdb-derive/: Cargo.toml
structdb-derive/src/: lib.rs  methods.rs
structdb-derive/src/methods/: basic.rs
tests/: default_trait.rs  error_handling.rs  functional_api.rs  macro_output.rs  map.rs  persistance.rs  save_timestamp_through_function.rs  simple_field.rs  simple_impl.rs  ui.rs  vec_deque.rs  wrapper_api.rs
tests/ui/: annotation_is_wong.rs  annotation_is_wong.stderr  attribute_does_not_exist.rs  attribute_does_not_exist.stderr  concurrent_access_does_not_compile.rs  concurrent_access_does_not_compile.stderr  db_misses_traits.rs  db_misses_traits.stderr  db_option_misses_value.rs  db_option_misses_value.stderr  db_option_missing.rs  db_option_missing.stderr  invalid_attribute_syntax.rs  invalid_attribute_syntax.stderr  invalid_db_value.rs  invalid_db_value.stderr  item_is_not_a_struct.rs  item_is_not_a_struct.stderr  map_missing_serialize.rs  map_missing_serialize.stderr  missing_db_option.rs  missing_db_option.stderr  multiple_backends.rs  multiple_backends.stderr  not_a_db_backend.rs  not_a_db_backend.stderr  trait_is_missing.rs  trait_is_missing.stderr  unknown_option.rs  unknown_option.stderr
