[package]
name = "dbstruct"
version = "0.1.0-alpha"
resolver = "2"
edition = "2021"
authors = ["David Kleingeld"]
readme = "README.md"
description = "Build a typed database by defining a struct"
repository = "https://github.com/dvdsk/dbstruct"
license = "MIT"
keywords = ["database", "typed database", "sled", "serde"]
categories = ["database", "caching"]
exclude = [
	".github/workflows.test.yml",
	".gitignore",
]


[features]

[dependencies]
dbstruct-derive = { path = "dbstruct-derive" }
thiserror = "1"
sled = "0.34"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
trybuild = "1"
