[package]
name = "dbstruct"
version = "0.4.1" 
resolver = "2"
edition = "2021"
rust-version = "1.60" # using `dep:` in features
authors = ["David Kleingeld"]
readme = "Readme.md"
description = "Build a typed database by defining a struct"
repository = "https://github.com/dvdsk/dbstruct"
license = "MIT"
keywords = ["database", "typed-database", "sled", "serde"]
categories = ["database", "caching"]
exclude = [
	".github/",
	".gitignore",
]

[features]
default = ["sled"]

[dependencies]
dbstruct-derive = "0.2.0"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"

# these create implicit dependencies called `sled` and `rocksdb`
sled = { version = "0.34", optional = true }
rocksdb = { version = "0.23", optional = true }

[dev-dependencies]
trybuild = "1"
tempdir = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
