[package]
name = "dbstruct-derive"
version = "0.2.0"
resolver = "2"
edition = "2021"
authors = ["David Kleingeld"]
description = "Build a typed database by defining a struct"
repository = "https://github.com/dvdsk/dbstruct"
license = "MIT"
categories = ["database", "caching"]
exclude = [
	".github/workflows.test.yml",
	".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1" 
proc-macro-error = "1"
thiserror = "2"
itertools = "0.12"

[lib]
proc-macro = true
